# Drone_OS

./: .gitignore  README.md
docs/: README.md
docs/architecture/: deployment_architecture.md  high_level_architecture.md  module_diagrams.md  sequence_diagrams.md  software_architecture.md  system_context.md
docs/decisions/: adr_0001_project_structure.md  adr_0002_ros_architecture.md  adr_0003_hardware_abstraction.md  adr_0004_mission_plugin_system.md  adr_0005_logging.md
docs/interfaces/: camera_interface.md  dashboard_interface.md  flight_controller_interface.md  mission_interface.md  optical_flow_interface.md  rangefinder_interface.md
docs/phase0/: coding_standards.md  configuration_strategy.md  design_decisions.md  development_workflow.md  documentation_standards.md  error_handling_strategy.md  git_strategy.md  logging_strategy.md  project_scope.md  repository_guidelines.md  software_requirements_specification.md  testing_strategy.md
ros2_ws/src/drone_bringup/: README.md  package.xml  setup.py
ros2_ws/src/drone_bringup/config/: hardware_config.yaml  logging_config.yaml  mission_config.yaml  safety_config.yaml
ros2_ws/src/drone_bringup/drone_bringup/: __init__.py  startup_order.py
ros2_ws/src/drone_bringup/launch/: droneos.launch.py
ros2_ws/src/drone_bringup/test/: test_droneos_launch.py  test_startup_order.py
ros2_ws/src/drone_core/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/drone_core/config/: global_config.yaml
ros2_ws/src/drone_core/docs/: failure_modes.md
ros2_ws/src/drone_core/drone_core/: __init__.py  boot_manager.py  di.py  health_checks.py  health_manager.py  lifecycle_manager.py  mission_manager.py  node.py  state_machine.py
ros2_ws/src/drone_core/launch/: drone_core.launch.py
ros2_ws/src/drone_core/test/: test_boot_manager.py  test_core_launch.py  test_di.py  test_flake8.py  test_health_checks.py  test_health_manager.py  test_lifecycle_manager.py  test_mission_manager.py  test_state_machine.py
ros2_ws/src/drone_hal/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/drone_hal/config/: hal_devices.yaml
ros2_ws/src/drone_hal/docs/: architecture.md  configuration.md  failure_modes.md  interfaces.md  recovery.md  testing_guide.md  topics_and_services.md
ros2_ws/src/drone_hal/drone_hal/: __init__.py  camera_driver.py  device.py  di.py  discovery.py  driver.py  exceptions.py  flight_controller_driver.py  loader.py  manager.py  node.py  optical_flow_driver.py  rangefinder_driver.py  registry.py
ros2_ws/src/drone_hal/launch/: hal.launch.py
ros2_ws/src/drone_hal/test/: _fakes.py  test_camera_driver.py  test_copyright.py  test_device.py  test_di.py  test_discovery.py  test_driver.py  test_flight_controller_driver.py  test_hal_launch.py  test_loader.py  test_manager.py  test_optical_flow_driver.py  test_pep257.py  test_rangefinder_driver.py  test_registry.py
ros2_ws/src/drone_interfaces/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/drone_interfaces/docs/: architecture.md  configuration.md  failure_modes.md  public_api.md  testing_guide.md
ros2_ws/src/drone_interfaces/drone_interfaces/: __init__.py  configuration.py  di.py  diagnostics.py  exceptions.py  health.py  lifecycle.py  logging.py  mission.py  mission_registry.py  state_machine.py
ros2_ws/src/drone_interfaces/test/: test_configuration_interface.py  test_di_interface.py  test_diagnostics_interface.py  test_exceptions.py  test_health_interface.py  test_lifecycle.py  test_logging_interface.py  test_mission_interface.py  test_state_machine.py
ros2_ws/src/drone_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/drone_msgs/action/: RunMission.action
ros2_ws/src/drone_msgs/docs/: interfaces.md  testing_guide.md
ros2_ws/src/drone_msgs/msg/: HealthReport.msg  MissionInfo.msg  SystemState.msg
ros2_ws/src/drone_msgs/srv/: ActivateMission.srv  ListMissions.srv
ros2_ws/src/drone_utils/: README.md  package.xml  setup.py
ros2_ws/src/drone_utils/docs/: configuration.md  failure_modes.md
ros2_ws/src/drone_utils/drone_utils/: __init__.py  config_loader.py  error_helpers.py  logger.py  message_conversion.py  time_utils.py  version_utils.py  yaml_parser.py
ros2_ws/src/drone_utils/test/: test_config_loader.py  test_error_helpers.py  test_logger.py  test_message_conversion.py  test_time_utils.py  test_version_utils.py  (+1 more)
