<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bringup</name>
  <version>0.1.0</version>
  <description>
    System startup: launch files, parameter loading, and node startup
    order for DroneOS. No node logic of its own.
  </description>
  <maintainer email="harishpatel1005@gmail.com">DroneOS Platform Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>drone_core</exec_depend>
  <exec_depend>drone_hal</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros-jazzy-launch-testing</test_depend>
  <test_depend>ros-jazzy-launch-testing-ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
