<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_core</name>
  <version>0.1.0</version>
  <description>
    DroneOS Core: boot manager, state machine, health manager, mission
    manager, lifecycle manager, configuration manager, and diagnostics
    publisher. No hardware, mission logic, camera, flight control, or AI.
  </description>
  <maintainer email="harishpatel1005@gmail.com">DroneOS Platform Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>drone_interfaces</depend>
  <depend>drone_msgs</depend>
  <depend>drone_utils</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros-jazzy-launch-testing</test_depend>
  <test_depend>ros-jazzy-launch-testing-ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
